# rustengine

./: Cargo.toml  LICENSE  New Text Document.txt  README.md  a.txt  list-all.sh  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
oxidized/: package.json  pnpm-lock.yaml
oxidized/src/content/docs/: index.mdx
oxidized/src/content/docs/reference/: colliders.md  components.md  engine.md  gameobject.md  graphics.md  raycast.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/oxidized/projects/: a.json
src-tauri/projects/: asteroids.json
src-tauri/src/: example.rs  lib.rs  main.rs
src-tauri/src/engine/: bounds.rs  components.rs  gameobject.rs  raycast.rs  renderer.rs  save.rs  state.rs  time.rs
src-tauri/src/engine/graphics_backend/: color.rs  mesh.rs  mod.rs  object.rs  primitives.rs  vertex.rs
src-tauri/src/frontend/: mod.rs
src/app/: layout.tsx  page.tsx
src/app/edit/: page.tsx
src/engine/: bounds.rs  camera.rs  collider.rs  component.rs  components.rs  gameobject.rs  mod.rs  physics.rs  renderer.rs  save.rs  state.rs  static_component.rs  utils.rs
src/engine/graphics_backend/: Inter-Medium.ttf:Zone.Identifier  mod.rs  object.rs  primitives.rs  vertex.rs
src/engine/ui/: mod.rs  text.rs  text_shader.wgsl
