[package]
name = "rustgameengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
colored = "2.1.0"
downcast-rs = "1.2.1"
ash = "0.37.0"
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = "1.15.0"
bytemuck_derive = "1.6.0"
rand = "0.8.5"
cgmath = "0.18.0"
nalgebra = "0.32.5"
rusttype = "0.9.3"
opencv = "0.91.3"
image = "0.25.1"
glyph_brush = "0.7.8"
wgpu_glyph = "0.22.0"
glyph_brush_layout = "0.2.3"
